--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "body-parser": "^1.16.0",
     "dotenv": "^4.0.0",
     "express": "4.13.4",
+    "handlebars": "^4.0.6",
+    "hbs": "^4.0.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.7",
     "nodemon": "^1.11.0",
