--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "handlebars": "^4.0.6",
     "hbs": "^4.0.1",
     "lodash": "^4.17.4",
+    "moment": "^2.17.1",
     "mongoose": "^4.7.7",
     "nodemon": "^1.11.0",
     "request": "^2.79.0",
