--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "4.13.4",
     "handlebars": "^4.0.6",
     "hbs": "^4.0.1",
+    "json-hash": "^1.2.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "mongoose": "^4.7.8",
