--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-xray-sdk": "^1.1.1",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "dotenv": "^4.0.0",
